--- a/package.xml
+++ b/package.xml
@@ -49,11 +49,11 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>cv2</build_depend>
+  <build_depend>cv_bridge</build_depend>
   <build_depend>rospy</build_depend>
-  <build_export_depend>cv2</build_export_depend>
+  <build_export_depend>cv_bridge</build_export_depend>
   <build_export_depend>rospy</build_export_depend>
-  <exec_depend>cv2</exec_depend>
+  <exec_depend>cv_bridge</exec_depend>
   <exec_depend>rospy</exec_depend>
 
 
